Revision history for Perl extension Bio::Graphics.

2.28
    - Fixes to restore density plot functionality in hybrid_plot and vista_plot.

2.27
    - Fix handling of code ref subs to allow for option=>\&Packagename::functionname.

2.26
    - Support for normalizing quantitative plots across entire track.
    - Support for transparency within tracks, allowing features to overlap.
    - Support for -color_series and -color_cycle options (see Bio::Graphics::Panel)
      which cycle dynamically among a fixed series of background colors.

2.25
    - Deprecate xyplot "histogram" subtype and default to "boxes".
    - Add xyplot overlay feature.
    - Fix gene glyph so that it collapses appropriately when bump explicitly
      set to 0.
    - Highlighting now works on features contained within groups.

2.24
    - In feature file configuration sections, allow a tag to contain ":".
  
2.23
    - Workaround a problem in BioPerl 1.069 which prevents FeatureFile from rendering
      properly. Fixed in 1.06902 and higher.
    - Fix issue which caused the track bgcolor property to be ignored in some cases.

2.22
     - Changed package "Math" to "Bio::Graphics::Math" to avoid CPAN namespace
       collisions.

2.21
     - Changed almost all occurrences of attributes() into eval{$feature->get_tag_values()}
       to achieve compatibility with Bio::SeqFeatureI. One exception is in spectrogram glyph,
       which depends on the non-standard behavior of attributes() when called with no args.
 
2.20
     - Fixed the various "wiggle" glyphs so that scale is always drawn even if no data is to be
       shown in selected region.

2.19
     - Made "record_label_positions" default to "true" for wiggle_density plot. This activates
       a fixed-position floating label when density plots are being shown in GBrowse.
     - Fixed a bug in wiggle_xyplot that prevented plot from being drawn in SVG renderings.

2.18