@@ -2,6 +2,7 @@ Revision history for Perl extension Bio::Graphics.
 
 2.28
     - Fixes to restore density plot functionality in hybrid_plot and vista_plot.
+    - Fix handling of Bio::Graphics::Wiggle files in xyplots.
 
 2.27
     - Fix handling of code ref subs to allow for option=>\&Packagename::functionname.
